[project]
name = "ai-engg-assignement-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-pinecone>=0.2.11",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "pypdf>=6.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
]
